--- a/package.json
+++ b/package.json
@@ -3,5 +3,25 @@
     "express": "^4.17.2",
     "jest": "^27.4.7",
     "supertest": "^6.1.6"
-  }
+  },
+  "name": "express-server-deployment",
+  "description": "HTTP express server deployed via Herokufor code401 lab 01.",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "jest --verbose --coverage",
+    "start": "nodemon index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eriksavage/express-server-deployment.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/eriksavage/express-server-deployment/issues"
+  },
+  "homepage": "https://github.com/eriksavage/express-server-deployment#readme"
 }
