--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "jest --verbose --coverage",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
